# cpp-cuda-deepvision-rtx-starter

./: .gitignore  CMakeLists.txt  README.md
scripts/: benchmark.sh  install_nsight_ubuntu.sh  nsight_compute.sh  nsight_profile.sh
src/: conv_kernels.cu  conv_kernels.cuh  cudnn_helpers.cu  cudnn_helpers.cuh  main.cpp  main.cu  relu_kernels.cu  relu_kernels.cuh
src/utils/: check_cuda.hpp
